avoid overlap with "save for later" icon

--- a/extension/style.css
+++ b/extension/style.css
@@ -79,7 +79,7 @@
 }
 
 .NPG-dropdown.type-compact .list-group-item-name {
-    padding-right: 15px;
+    padding-right: 35px;
 }
 
 .NPG-dropdown.type-compact .boxed-group {
